test/functions/deitz/test_visible1.good
test_visible1.chpl:14: error: unresolved call 'bar(C)'
